--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,5 @@
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
 }
+
+#map { height: 300px; }
